--- a/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/angular.json
+++ b/HomeBrewedChallenges/WebApps/Injection/summit-ssn/summit-ssn-frontend/angular.json
@@ -29,10 +29,12 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/_routes.json"
+              "src/_routes.json",
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
