--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-backend/package.json
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-backend/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "summit-login-backend",
 	"scripts": {
-		"dev": "wrangler dev",
+		"dev": "wrangler dev --remote",
 		"deploy": "wrangler deploy --minify",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
