--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/angular.json
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/angular.json
@@ -58,7 +58,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.dev.ts"
+                  "with": "src/environments/environment-dev.ts"
                 }
               ]
             }
