--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/package.json
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/package.json
@@ -25,6 +25,7 @@
 		"@angular/platform-server": "^19.1.0",
 		"@angular/router": "^19.1.0",
 		"@angular/ssr": "^19.1.6",
+		"moment": "^2.30.1",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.15.0"
