--- a/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/angular.json
+++ b/HomeBrewedChallenges/WebApps/Enumeration/summit-login/summit-login-frontend/angular.json
@@ -27,7 +27,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "./"
               },
               "src/_routes.json",
               "src/assets"
@@ -53,7 +54,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment-dev.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
